# coderizz-website

./: README.md  build.sh  db.sqlite3  manage.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt
app/: page.js
coderizz/: asgi.py  settings.py  urls.py  wsgi.py
main/: models.py  views.py
main/migrations/: 0001_initial.py
main/static/main/css/: a.css  flex-slider.css  font-awesome.css  templatemo-softy-pinko.css
main/templates/: events.html  ide.html  index.html  login.html  register.html  update.html
mysite/: settings.py  urls.py
user/: managers.py  models.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_remove_user_last_name_user_department_and_more.py  0003_register.py  0004_alter_register_reginster_number_and_more.py
user/templates/: admin-base.html  admin-dashboard.html  admin-project.html  admin.html  content.html  content_library.html  login.html  project.html  s.html  users.html
